2003-01-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, tree.c, xmledit.c

	Changed GConf path to be custom-dispspec-paths, and removed all of the installation paths from it, instead generating it at run-time as a fix for bug #129776; change to the clipboard setting API and lots of debug clipboard code as work towards fixing bug #129731

2004-01-02  Geert Stappers <stappers@stappers.nl>

	* cong-app.c
	enable GConf search again, we have to fix bug #129776 (missing
	@PKGDATADIR@) at the right place.

	* cong-dispspec-registry.c
	Tell which dispspecfile the warnings are about.

2003-12-30  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, cong-editor-node-text.c, tree.c, xmledit.c

	Reorganisation of clipboard code in preparation for a fix to bug #129731 (Clipboard interaction gets text but assumes it is XML source) ; disabled GConf search for dispspec paths until we have a fix for bug #129776 (missing @PKGDATADIR@ definition)

	* cong-modification-selection-change.c, cong-selection.h, select.c

	Attempts to fix bug #130236 (Excessive cong_node_get_ordering assertion failures) by making selection change an atomic range operation

	* cong-editor-widget3.c

	Fix for bug #123490 (Carriage return should add a carriage return if whitespace is being preserved)

	* cong-editor-node-text.c

	Added some assertions

	* cong-command.c

	Fix for bug #130227 (Pasting simple text using the middle mouse button often causes assertion failures)

	* cong-editor-area-flow-holder-blocks.c, cong-editor-node.c

	Fix for bug #129907 (Elements appear in reverse order under certain circumstances); made CongEditorNode get_prev/next routines aware of nodes missing due to whitespace removal

2003-12-21  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-location.c

	Fix for bug #129752 (nested entity edit)

2003-12-20  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-node.c, cong-node.h
